--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="tallesdsv" value="https://pkgs.dev.azure.com/tallesdsv/_packaging/tallesdsv/nuget/v3/index.json" />
+    <add key="PrivateFeed" value="https://pkgs.dev.azure.com/tallesdsv/Blog/_packaging/PrivateFeed/nuget/v3/index.json" />
   </packageSources>
 </configuration>
